# Nylon

./: .editorconfig  .gitignore  LICENSE  README.md  TESTING.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
agent/: .gitignore  package.json  tsconfig.json
agent/src/: config.ts  index.ts  protocol.ts
agent/src/cli/: argv.ts  env.ts  interactive-select.ts  live-region.ts  prompts.ts  render.ts  run.ts  spinner.ts  tty.ts  wizard.ts
agent/src/cli/anim/: banner.ts  checklist.ts  delay.ts  index.ts  progress-bar.ts  typewriter.ts
agent/src/cli/commands/: cat.ts  extract.ts  help.ts  init.ts  menu.ts  providers.ts  review.ts
agent/src/cli/menu/: main-menu.ts  post-run.ts  pr-agent-menu.ts  skills-menu.ts  task-exporter-data.ts  task-exporter-menu.ts  task-exporter-mock.ts
agent/src/github/: client.ts  pr.ts  review.ts
agent/src/integrations/clickup/: client.ts  (+3 more)
agent/src/pipeline/: chunker.ts  dispatch.ts  extract-orchestrator.ts  orchestrator.ts  url.ts
agent/src/providers/: anthropic.ts  cursor.ts  json.ts  openai.ts  registry.ts  types.ts
agent/src/skills/: catalogue.ts  registry.ts  types.ts
agent/src/util/: errors.ts  log.ts  paths.ts
agent/tests/: argv.test.ts  config.test.ts  env.test.ts  paths.test.ts  protocol.test.ts  skills.test.ts  tsconfig.json  url.test.ts
cli/: CMakeLists.txt  CMakePresets.json  vcpkg.json
cli/src/: main.cpp
cli/src/cli/: args.cpp  args.hpp  output.cpp  output.hpp  ui.cpp  ui.hpp
cli/src/config/: config.cpp  config.hpp
cli/src/ipc/: ndjson.cpp  ndjson.hpp  node_process.cpp  node_process.hpp
cli/tests/: CMakeLists.txt
docs/: ARCHITECTURE.md  CONFIG.md  INSTALL.md
installer/: install.ps1
(+19 files in other folders)
